crates/typecheck/tests/fixtures/errors/missing_trait_method.ax
trait Shape { fn area(self) -> Float }
struct Circle { radius: Float }
impl Shape for Circle { }
fn main() { }
